--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -14,6 +14,7 @@
           <div class="d-flex mb-2">
             <i class="bi bi-envelope-open text-primary me-2"></i>
             <p class="mb-0">itlac21560354@lcardenas.tecnm.mx</p>
+            <p class="mb-0">correoprofe@lcardenas.tecnm.mx</p>
           </div>
           <div class="d-flex mb-2">
             <i class="bi bi-telephone text-primary me-2"></i>
@@ -34,29 +35,6 @@
             ></a>
           </div>
         </div>
-
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6">
-      <div
-        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-5"
-      >
-        <h4 class="text-uppercase text-white mb-4">Regístrate</h4>
-        <h6 class="text-uppercase text-white">Registrate en el servicio</h6>
-        <p class="text-light">
-          <!-- Amet justo diam dolor rebum lorem sit stet sea justo kasd -->
-        </p>
-        <form action="">
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control border-white p-3"
-              placeholder="Ingresa tu email"
-            />
-            <button class="btn btn-dark">Ingresar</button>
-          </div>
-        </form>
       </div>
     </div>
   </div>
