--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -16,7 +16,7 @@
             <h1 class="display-2 text-white text-uppercase mb-md-4">
               ¡Bienvenido a InfinityTech!
             </h1>
-            <a routerLink="/contact" class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
+            <a href="/contact" class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
 
           </div>
         </div>
@@ -35,8 +35,7 @@
             <h1 class="display-2 text-white text-uppercase mb-md-4">
               ¡Bienvenido a InfinityTech!
             </h1>
-            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
-            <a routerLink="/contact" class="btn btn-light py-md-3 px-md-5">Contactanos</a>
+            <a href="/contact"class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
           </div>
         </div>
       </div>
