--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title text-center mb-4">Iniciar sesión gg</h2>
+          <h2 class="card-title text-center mb-4">Iniciar sesión</h2>
           <form (ngSubmit)="login()" #loginForm="ngForm">
             <div class="mb-3">
               <label for="usuarioEmail" class="form-label"
