--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="carousel-item active">
         <img
           class="w-100"
-          src="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/IMAGENES%20PAGINA%2FImagenes%20de%20Banner%2FBanner%201.jpg?alt=media&token=19bb10d0-d907-45a9-bb9d-53e4cffebe4b"
+          src="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/IMAGENES%20PAGINA%2FImagenes%20de%20Banner%2FBanner%201%20Nuevo.jpg?alt=media&token=1ce4ac3f-1eb8-4eff-bb01-580412e114cb"
           alt="Image"
         />
         <div
