--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,19 @@
 @import  'ngx-toastr/toastr' ;
 
+/* Evita el scroll horizontal global */
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
+/* Asegura que todos los contenedores no se desborden */
+* {
+  box-sizing: border-box;
+}
+
+/* Opcionalmente, corrige imágenes o elementos que se estiren */
+img, video, iframe {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
