fix: correciones de video,paginacion de ejercicios

--- a/src/app/public/contact/contact.component.html
+++ b/src/app/public/contact/contact.component.html
@@ -41,7 +41,7 @@
           <i class="fa fa-envelope fs-4 text-white"></i>
         </div>
         <h5 class="text-uppercase text-primary">Envianos un email</h5>
-        <p class="text-secondary mb-0">itlac21560354@lcardenas.tecnm.mx</p>
+        <p class="text-secondary mb-0"></p>
       </div>
     </div>
     <div class="col-lg-4">
@@ -55,7 +55,7 @@
           <i class="fa fa-phone fs-4 text-white"></i>
         </div>
         <h5 class="text-uppercase text-primary">Llamanos</h5>
-        <p class="text-secondary mb-0">+52 1 753 168 5671</p>
+        <p class="text-secondary mb-0"></p>
       </div>
     </div>
   </div>
