--- a/src/app/public/header/header.component.html
+++ b/src/app/public/header/header.component.html
@@ -12,7 +12,7 @@
           class="mr-2"
           style="height: 80px; width: auto"
         />
-        <h1 class="m-0 display-4 text-primary text-uppercase">InfinityTech</h1>
+        <h1 class="m-0 display-4 text-primary text-uppercase">trainity</h1>
       </a>
     </div>
 
@@ -22,15 +22,15 @@
         <div class="col-lg-7 px-5 text-start">
           <div class="h-100 d-inline-flex align-items-center py-2 me-4">
             <i class="fa fa-envelope text-primary me-2"></i>
-            <h6 class="mb-0">itlac21560354@lcardenas.tecnm.mx</h6>
+            <h6 class="mb-0"></h6>
           </div>
           <div class="h-100 d-inline-flex align-items-center py-2">
             <i class="fa fa-phone-alt text-primary me-2"></i>
-            <h6 class="mb-0">+52 1 753 168 5671</h6>
+            <h6 class="mb-0"></h6>
           </div>
           <div class="h-100 d-inline-flex align-items-center py-2">
             <i class="fa fa-phone-alt text-primary me-2"></i>
-            <h6 class="mb-0">+52 1 753 168 5671</h6>
+            <h6 class="mb-0"></h6>
           </div>
 
         </div>
