--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -14,7 +14,7 @@
           <div class="p-3" style="max-width: 900px">
             <h5 class="text-white text-uppercase">Best Gym Center</h5>
             <h1 class="display-2 text-white text-uppercase mb-md-4">
-              ¡Bienvenido a InfinityTech!
+              ¡Bienvenido a trainity!
             </h1>
             <a href="/contact" class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
 
@@ -33,7 +33,7 @@
           <div class="p-3" style="max-width: 900px">
             <h5 class="text-white text-uppercase">Best Gym Center</h5>
             <h1 class="display-2 text-white text-uppercase mb-md-4">
-              ¡Bienvenido a InfinityTech!
+              ¡Bienvenido a trainity!
             </h1>
             <a href="/contact"class="btn btn-primary py-md-3 px-md-5 me-3">Unete</a>
           </div>
@@ -77,14 +77,14 @@
     <div class="col-lg-7">
       <div class="mb-4">
         <h5 class="text-primary text-uppercase">BIENVENIDO A</h5>
-        <h1 class="display-3 text-uppercase mb-0">INFINITY TECH GYM</h1>
+        <h1 class="display-3 text-uppercase mb-0">trainity</h1>
       </div>
       <h4 class="text-body mb-4">
-        En Infinity Tech Gym, ofrecemos una amplia gama de clases de fitness,
+        En trainity, ofrecemos una amplia gama de clases de fitness,
         desde entrenamiento de fuerza hasta yoga y todo lo demás.
       </h4>
       <p class="mb-4">
-        ¡Bienvenido a Infinity Tech Gym, tu destino definitivo para alcanzar tus
+        ¡Bienvenido a trainity, tu destino definitivo para alcanzar tus
         metas de fitness! En nuestro moderno centro ubicado en Lázaro Cárdenas,
         te ofrecemos un ambiente dinámico y equipamiento de última generación
         para ayudarte a alcanzar tu máximo potencial.
@@ -111,7 +111,7 @@
         <div class="tab-content">
           <div class="tab-pane fade show active" id="pills-1">
             <p class="text-secondary mb-0">
-              En Infinity Tech Gym, ofrecemos una amplia gama de clases de
+              En trainity, ofrecemos una amplia gama de clases de
               fitness, desde entrenamiento de fuerza hasta yoga y todo lo demás.
               Nuestras instalaciones están diseñadas para adaptarse a todas tus
               necesidades de entrenamiento, con áreas de cardio de vanguardia,
@@ -124,7 +124,7 @@
               Tech Gym te damos la bienvenida a un ambiente inclusivo y
               motivador donde puedes desafiarte a ti mismo y superar tus
               límites. ¡Únete a nosotros hoy mismo y descubre el infinito
-              potencial de tu cuerpo en Infinity Tech Gym!
+              potencial de tu cuerpo en trainity!
             </p>
           </div>
         </div>
