--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -13,12 +13,12 @@
           </div>
           <div class="d-flex mb-2">
             <i class="bi bi-envelope-open text-primary me-2"></i>
-            <p class="mb-0">itlac21560354@lcardenas.tecnm.mx</p>
-            <p class="mb-0">correoprofe@lcardenas.tecnm.mx</p>
+            <!-- <p class="mb-0">itlac21560354@lcardenas.tecnm.mx</p>
+            <p class="mb-0">correoprofe@lcardenas.tecnm.mx</p> -->
           </div>
           <div class="d-flex mb-2">
             <i class="bi bi-telephone text-primary me-2"></i>
-            <p class="mb-0">+52 1 753 168 5671</p>
+            <!-- <p class="mb-0">+52 1 753 168 5671</p> -->
           </div>
           <div class="d-flex mt-4">
             <a class="btn btn-primary btn-square rounded-circle me-2" href="#"
