--- a/src/app/public/pages/video-detalle-gm/video-detalle-gm.component.html
+++ b/src/app/public/pages/video-detalle-gm/video-detalle-gm.component.html
@@ -16,34 +16,35 @@
     <div class="spinner-border text-primary" role="status">
       <span class="visually-hidden">Loading...</span>
     </div>
-    <p class="mt-2">Cargando Rutinas...</p>
+    <p class="mt-2">Cargando datos...</p>
   </div>
 </ng-template>
 <!-- Blog Start -->
 <div class="container-fluid p-5">
   <div class="row g-5">
     <div class="col-lg-8">
-      <!-- Blog Detail Start -->
       <div class="mb-5" *ngIf="!loading; else loader">
         <div>
           <h1 class="text-uppercase mb-4">{{ rutina.nombre }}</h1>
           <p class="descripcion">{{ rutina.descripcion }}</p>
         </div>
         <div class="d-flex justify-content-center">
-          <video class="w-75 mb-5 mt-5" controls>
-            <source [src]="rutina.video_url" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
+          <iframe
+            class="w-75 mb-5 mt-5"
+            [src]="getSafeVideoUrl(rutina.video_url)"
+            frameborder="0"
+            allowfullscreen
+            style="aspect-ratio: 16/9; height: auto;"
+          ></iframe>
         </div>
       </div>
+
       <div>
         <h1 class="text-uppercase mb-4">Informacion de Lesiones</h1>
       <p style="font-size: 28px;" class="lesion">{{ rutina.lesion  }}</p>
       </div>
 
-      <!-- Blog Detail End -->
 
-      <!-- Comment List Start -->
       <div class="container-fluid p-5" *ngIf="!loading; else loader">
         <div class="row g-5">
           <div class="col-lg-4" *ngFor="let rutina of ejercicios">
@@ -79,18 +80,11 @@
           <p class="mt-2">Cargando Videos</p>
         </div>
       </ng-template>
-      <!-- Comment List End -->
 
-      <!-- Comment Form Start -->
-
-      <!-- Comment Form End -->
     </div>
 
-    <!-- Sidebar Start -->
     <div class="col-lg-4">
-      <!-- Search Form Start -->
 
-      <!-- Search Form End -->
       <ng-template #loader>
         <div class="text-center" style="margin-top: 5%">
           <div class="spinner-border text-primary" role="status">
@@ -99,7 +93,6 @@
           <p class="mt-2">Cargando Informacion...</p>
         </div>
       </ng-template>
-      <!-- Category Start -->
       <div class="mb-5">
         <h3 class="text-uppercase mb-4">Otros grupos musculares</h3>
         <div
@@ -116,7 +109,6 @@
         </div>
       </div>
 
-      <!-- Tags Start -->
       <div class="mb-5">
         <h3 class="text-uppercase mb-4">Equipo de Trabajo</h3>
         <div class="d-flex flex-wrap m-n1" *ngIf="!loading; else loader">
