--- a/src/app/public/pages/videos-all/videos-all.component.html
+++ b/src/app/public/pages/videos-all/videos-all.component.html
@@ -41,48 +41,39 @@
       </button>
     </div>
   </div>
-  <div class="row g-5">
-    <div class="col-lg-12">
-      <!-- Blog Detail Start -->
-
-      <!-- Blog Detail End -->
-
-      <!-- Comment List Start -->
-      <div class="container-fluid p-5" *ngIf="!loading2; else loader">
-        <div class="row g-5">
-          <div class="col-lg-3" *ngFor="let rutina of filteredVideos">
-            <div class="blog-item">
-              <div class="position-relative overflow-hidden rounded-top">
-                <img class="img-fluid" [src]="getImageSrc(rutina.miniatura)" alt="" />
-              </div>
-
-              <div class="bg-dark d-flex align-items-center rounded-bottom p-3">
-                <a
-                  class="h5 text-uppercase text-light"
-                  [href]="'/pages/grupos-musculares/video/' + rutina.id"
-                  >{{ rutina.nombre }}</a
-                >
-                <!-- <a class="btn btn-light btn-sm ms-auto" [href]="'/pages/grupos-musculares/' + rutina.id" >Ver Ejercicios</a> -->
-              </div>
-            </div>
-          </div>
-        </div>
+<div
+  class="row g-5 mt-3"
+  (window:scroll)="onScroll()"
+>
+  <div class="col-lg-3" *ngFor="let rutina of filteredVideos">
+    <div class="blog-item">
+      <div class="position-relative overflow-hidden rounded-top">
+        <img class="img-fluid" [src]="getImageSrc(rutina.miniatura)" alt="" />
       </div>
-      <ng-template #loader>
-        <div class="text-center" style="margin-top: 5%">
-          <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Loading...</span>
-          </div>
-          <p class="mt-2">Cargando Videos</p>
-        </div>
-      </ng-template>
-      <!-- Comment List End -->
-
-      <!-- Comment Form Start -->
-
-      <!-- Comment Form End -->
+      <div class="bg-dark d-flex align-items-center rounded-bottom p-3">
+        <a
+          class="h5 text-uppercase text-light"
+          [href]="'/pages/grupos-musculares/video/' + rutina.id"
+        >
+          {{ rutina.nombre }}
+        </a>
+      </div>
     </div>
+  </div>
 
-    <!-- Sidebar Start -->
+  <!-- Optional: loader visual abajo -->
+  <div class="text-center" *ngIf="loadingVIDEOS">
+    <div class="spinner-border text-primary" role="status"></div>
+    <p class="mt-2">Cargando más videos...</p>
   </div>
 </div>
+
+</div>
+<ng-template #loader2>
+  <div class="text-center" style="margin-top: 5%">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+    <p class="mt-2">Cargando Videos</p>
+  </div>
+</ng-template>
