--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -69,7 +69,7 @@
       <div class="position-relative h-100">
         <img
           class="position-absolute w-100 h-100 rounded"
-          src="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/IMAGENES%20PAGINA%2FImagenes%20Promocionales%2FPromocional%202.png?alt=media&token=a1f4ce93-74fb-4bd9-8d2c-79445c53096b"
+          src="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/IMAGENES%20PAGINA%2FImagenes%20Promocionales%2FPromocional%202NUEVA.png?alt=media&token=6bbd7a7d-b09d-4abd-9573-5ec517794401"
           style="object-fit: cover"
         />
       </div>
