--- a/src/app/public/pages/rutinas/rutinas-public/rutinas-publicas-detalle/rutinas-publicas-detalle.component.html
+++ b/src/app/public/pages/rutinas/rutinas-public/rutinas-publicas-detalle/rutinas-publicas-detalle.component.html
@@ -8,8 +8,7 @@
       <h1 class="display-2 text-uppercase text-white mb-md-4">
         {{ rutina.repeticiones }}
       </h1>
-      <a class="btn btn-primary py-md-3 px-md-5 me-3">{{ rutina.nivel }}</a>
-      <a href="" class="btn btn-light py-md-3 px-md-5">{{ rutina.estado }}</a>
+      <a href="" class="btn btn-light py-md-3 px-md-5">Volver</a>
     </div>
   </div>
 </div>
