--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -13,24 +13,21 @@
           </div>
           <div class="d-flex mb-2">
             <i class="bi bi-envelope-open text-primary me-2"></i>
-            <!-- <p class="mb-0">itlac21560354@lcardenas.tecnm.mx</p>
-            <p class="mb-0">correoprofe@lcardenas.tecnm.mx</p> -->
+           <p class="mb-0">berna_zepeda@hotmail.com</p>
+          <!--    <p class="mb-0">correoprofe@lcardenas.tecnm.mx</p> -->
           </div>
-          <div class="d-flex mb-2">
-            <i class="bi bi-telephone text-primary me-2"></i>
-            <!-- <p class="mb-0">+52 1 753 168 5671</p> -->
-          </div>
+
           <div class="d-flex mt-4">
-            <a class="btn btn-primary btn-square rounded-circle me-2" href="#"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <!-- <a class="btn btn-primary btn-square rounded-circle me-2" href="#"
+
+            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.facebook.com/share/18tkRmkajC/"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a class="btn btn-primary btn-square rounded-circle me-2" href="#"
+           <!--    <a class="btn btn-primary btn-square rounded-circle me-2" href=""
+              ><i class="fab fa-twitter"></i
+            ></a><a class="btn btn-primary btn-square rounded-circle me-2" href="#"
               ><i class="fab fa-linkedin-in"></i
             ></a> -->
-            <a class="btn btn-primary btn-square rounded-circle" href="#"
+            <a class="btn btn-primary btn-square rounded-circle" href="https://www.instagram.com/infinitygymlzc?igsh=aWFteDU5bzh4bmJ1"
               ><i class="fab fa-instagram"></i
             ></a>
           </div>
