--- a/src/app/public/header/header.component.html
+++ b/src/app/public/header/header.component.html
@@ -22,16 +22,9 @@
         <div class="col-lg-7 px-5 text-start">
           <div class="h-100 d-inline-flex align-items-center py-2 me-4">
             <i class="fa fa-envelope text-primary me-2"></i>
-            <h6 class="mb-0"></h6>
+            <h6 class="mb-0">berna_zepeda@hotmail.com</h6>
           </div>
-          <div class="h-100 d-inline-flex align-items-center py-2">
-            <i class="fa fa-phone-alt text-primary me-2"></i>
-            <h6 class="mb-0"></h6>
-          </div>
-          <div class="h-100 d-inline-flex align-items-center py-2">
-            <i class="fa fa-phone-alt text-primary me-2"></i>
-            <h6 class="mb-0"></h6>
-          </div>
+
         </div>
 
         <div class="col-lg-5 px-5 text-end">
