--- a/src/app/public/pages/video-detalle-gm/video-detalle-gm.component.html
+++ b/src/app/public/pages/video-detalle-gm/video-detalle-gm.component.html
@@ -30,20 +30,23 @@
         </div>
         <div class="d-flex justify-content-center">
           <iframe
-            class="w-75 mb-5 mt-5"
-            [src]="getSafeVideoUrl(rutina.video_url)"
-            frameborder="0"
-            allowfullscreen
-            style="aspect-ratio: 16/9; height: auto;"
-          ></iframe>
+          class="w-75 mb-5 mt-5"
+          [src]="safeVideoUrl"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          style="aspect-ratio: 16/9; height: auto;"
+          loading="lazy"
+        ></iframe>
+
+
         </div>
       </div>
 
       <div>
         <h1 class="text-uppercase mb-4">Informacion de Lesiones</h1>
-      <p style="font-size: 28px;" class="lesion">{{ rutina.lesion  }}</p>
+        <p style="font-size: 28px" class="lesion">{{ rutina.lesion }}</p>
       </div>
-
 
       <div class="container-fluid p-5" *ngIf="!loading; else loader">
         <div class="row g-5">
@@ -68,10 +71,7 @@
           </div>
         </div>
       </div>
-      <div>
-
-
-      </div>
+      <div></div>
       <ng-template #loader2>
         <div class="text-center" style="margin-top: 5%">
           <div class="spinner-border text-primary" role="status">
@@ -80,11 +80,9 @@
           <p class="mt-2">Cargando Videos</p>
         </div>
       </ng-template>
-
     </div>
 
     <div class="col-lg-4">
-
       <ng-template #loader>
         <div class="text-center" style="margin-top: 5%">
           <div class="spinner-border text-primary" role="status">
