add mejoras de ui

--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -41,7 +41,7 @@
     <div class="col-lg-8">
       <div class="py-lg-4 text-center">
         <p class="text-secondary mb-0">
-          &copy; <a class="text-light fw-bold" href="#">InfinityTech</a>. All
+          &copy; <a class="text-light fw-bold" href="#">Trainity</a>. All
           Rights Reserved.
         </p>
       </div>
