--- a/src/app/public/header/header.component.html
+++ b/src/app/public/header/header.component.html
@@ -8,7 +8,7 @@
       >
         <img
           src="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/Logo-min.png?alt=media&token=0e8916f3-607a-48a0-af25-a60ffe88b5d2"
-          alt="InfinityTech Logo"
+          alt="Trainity Logo"
           class="mr-2"
           style="height: 80px; width: auto"
         />
@@ -51,7 +51,7 @@
       >
         <a href="index.html" class="navbar-brand d-block d-lg-none">
           <h1 class="m-0 display-4 text-primary text-uppercase">
-            InfinityTech
+            Trainity
           </h1>
         </a>
         <button
